--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -6,6 +6,7 @@ $grey: grey;
 $nav-link-color: #0E0C0D;
 $sign-in: #696F7A;
 $request-call-backg: #F3F3F7;
+$hr-color: #ECECF1;
 $color-red: #FF2E65;
 $price-color: #231F20;
 $title-product: #797979;
@@ -36,6 +37,8 @@ $signOutMoreLight: rgb(221, 228, 226);
 $hr: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
 $freeDel: #213134;
 $politic: #9D9D9B;
+$box-shadow-popover: 0px 4px 28px 0px rgba(0, 0, 0, 0.08);
+$border-popover: rgba(247, 210, 45, 0.40);
 
 // font-size
 $font-size8: 8px;
